# email-calendar-mcp-server

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
config/: .gitkeep
src/email_calendar_mcp/: __init__.py  main.py
src/email_calendar_mcp/auth/: __init__.py  oauth.py  token_manager.py
src/email_calendar_mcp/services/: __init__.py  calendar_service.py  email_service.py
src/email_calendar_mcp/tools/: __init__.py  calendar_tools.py  email_tools.py
src/email_calendar_mcp/utils/: __init__.py  config.py  logger.py
tests/: conftest.py  test_calendar_tools.py  test_email_tools.py  test_token_manager.py
